--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -27,7 +27,21 @@
         android:layout_marginTop="31dp"
         android:text="mô tả cho field trên có nhiệm vụ gì" />
 
+<!--    <Button-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="60dp"-->
+<!--        android:id="@+id/btnSaveChangeProfile"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/forgot"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        android:layout_marginLeft="16dp"-->
+<!--        android:layout_marginRight="16dp"-->
+<!--        android:text="Lưu"-->
+<!--        android:textColor="#ffffff"-->
+<!--        android:backgroundTint="@color/red_tiktok"-->
+<!--        />-->
 
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+</androidx.appcompat.widget.LinearLayoutCompat>
 
