add: comment feature

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -110,6 +110,7 @@
             android:textStyle="bold"/>
 
         <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/linearLayoutCompat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -120,14 +121,14 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0">
 
-<!--            <TextView-->
-<!--                android:id="@+id/hoso"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="16dp"-->
-<!--                android:gravity="center"-->
-<!--                android:text="Hồ sơ"-->
-<!--                android:textStyle="bold" />-->
+            <!--            <TextView-->
+            <!--                android:id="@+id/hoso"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginTop="16dp"-->
+            <!--                android:gravity="center"-->
+            <!--                android:text="Hồ sơ"-->
+            <!--                android:textStyle="bold" />-->
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/avatar"
@@ -140,11 +141,12 @@
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:orientation="horizontal"
 
-                android:layout_height="wrap_content">
+                android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/tennguoidung"
                     android:layout_width="wrap_content"
@@ -154,12 +156,13 @@
                     android:paddingBottom="14dp"
                     android:text="\@username"
                     android:textStyle="bold" />
+
                 <ImageView
                     android:id="@+id/iconQr"
-                    android:layout_marginLeft="8dp"
-                    android:src="@drawable/qr_code_icon"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:src="@drawable/qr_code_icon" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -181,10 +184,22 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="150dp"
                 android:backgroundTint="@color/red_tiktok"
-                android:textColor="#ffffff"
                 android:text="Đăng nhập hoặc đăng ký"
-                android:textAllCaps="false" />
+                android:textAllCaps="false"
+                android:textColor="#ffffff" />
         </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <TextView
+            android:id="@+id/hoso"
+            android:layout_marginTop="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Hồ sơ"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
