--- a/app/src/main/res/layout/dialog_comment.xml
+++ b/app/src/main/res/layout/dialog_comment.xml
@@ -28,5 +28,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/typeCmt"
+            android:hint="nhập gì đó"
+            android:layout_weight="6"
+            android:layout_gravity="end"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <ImageView
+            android:id="@+id/btnSentComment"
+            android:src="@drawable/sent_comment"
+            android:padding="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
 </androidx.appcompat.widget.LinearLayoutCompat>
 
